--- a/CV/page1sidebar.tex
+++ b/CV/page1sidebar.tex
@@ -2,24 +2,48 @@
 
 
 \cvsection{Compétences}
-\cvskill{Optique théorique}{4}
-\cvskill{Optique expérimentale}{4}
+\large\textbf{Sciences}
+
+\begin{itemize}
+\item \cvskill{Physique des lasers}{4}
+\item \cvskill{Optique théorique}{4}
+\item \cvskill{Optique expérimentale}{4}
+\item \cvskill{Matière condensée}{4}
+\item \cvskill{Physique statistique}{4}
+\item \cvskill{Théorie du signal}{4}
+\end{itemize}
+
+\divider
+
+\large\textbf{Modélisation/Simulation}
+\begin{itemize}
+	\item \cvskill{Python}{4}
+	\item \cvskill{Mathematica}{3}
+	\item \cvskill{Matlab}{3}
+	\item \cvskill{C/C++}{3}
+\end{itemize}
+
+\divider
+
+\large\textbf{Rédaction}
+\begin{itemize}
+	\item\cvskill{\LaTeX}{4}	
+	\item \cvskill{Pack Office}{3}
+	\item \cvskill{Markdown}{3}
+\end{itemize}
 
 
-\cvskill{Python}{4}
-\cvskill{C/C++}{4}
-\cvskill{\LaTeX}{3}
 
-\cvskill{Mathematica}{3}
-\cvskill{Matlab}{3}
 
-\cvskill{Modélisation numérique}{3}
-\cvskill{Pack Office}{4}
+
+
+
 \medskip
 
 \cvsection{Langues}
 
- \textbf{Anglais (CLES B2)}
+ \textbf{Anglais (CLES B2)}\\
+ \textbf{Breton (Bilingue)}
 
 
 %% Yeah I didn't spend too much time making all the 
@@ -29,28 +53,24 @@
 
 
 \cvsection{Centres d'intérêt}
-Musique (guitare, flûte)\\
-Informatique\\
-Philosophie des sciences\\
-Sciences et Technique\\
-Pédagogie et transmission du savoir\\
+
+\begin{itemize}
+	\item Musique (guitare, flûte, piano)
+	\item Informatique
+	\item Philosophie des sciences
+	\item Sciences et Technique
+	\item Pédagogie et transmission du savoir
+\end{itemize}
+
 \medskip
 
 
 \cvsection{Projets}
-\setlength{\tabcolsep}{10pt}
-\renewcommand{\arraystretch}{0.5} % Default value: 1
-\begin{tabular}{l}
-\raisebox{-10pt}{\includegraphics[width=22pt]{logo.pdf}} \href{https://www.paradiselab.fr}{{\textbf{ParadiseLab.fr}}}
-\end{tabular}
-\medskip
+
+\large{\paradiselab \hspace{0.2em}  \href{https://www.curiositas.me}{{\textbf{curiositas.me}}}} - Blog / Porte-folio
 
 
 
-
-
-
-\medskip
 
 %
 %\cvsection{Références}
