--- a/CV/main.bib
+++ b/CV/main.bib
@@ -1,19 +1,23 @@
-@ARTICLE{Sinquin2021,
-  author={Brian, Sinquin and Romanelli, Marco and Bouhier, Steve and Frein, Ludovic and Vallet, Marc and Alouini, Mehdi},
-  journal={Journal of Lightwave Technology}, 
-  title={Low Phase Noise Direct-Modulation Optoelectronic Oscillator}, 
-  year={2021},
-  volume={},
-  number={},
-  pages={1-1},
-  doi={10.1109/JLT.2021.3111703}}
-
-@INPROCEEDINGS{Sinquin2021_2,
-  author={Sinquin, Brian and Romanelli, Marco and Bouhier, Steve and Alouini, Mehdi and Vallet, Marc},
-  booktitle={2021 Conference on Lasers and Electro-Optics Europe   European Quantum Electronics Conference (CLEO/Europe-EQEC)}, 
-  title={Low phase noise microwave generation from a direct-modulation optoelectronic oscillator (DM-OEO)}, 
-  year={2021},
-  volume={},
-  number={},
-  pages={1-1},
-  doi={10.1109/CLEO/Europe-EQEC52157.2021.9542636}}
+@article{Sinquin2023,
+  author    = {Brian Sinquin and Marco Romanelli},
+  journal   = {Opt. Lett.},
+  keywords  = {Distributed feedback lasers; Optical feedback; Optical fields; Optical networks; Semiconductor lasers; Vertical cavity surface emitting lasers},
+  number    = {4},
+  pages     = {863--866},
+  publisher = {Optica Publishing Group},
+  title     = {Determination of the linewidth enhancement factor of semiconductor lasers by complete optical field reconstruction},
+  volume    = {48},
+  month     = {Feb},
+  year      = {2023},
+  doi       = {10.1364/OL.483776}
+}
+@article{Sinquin2021,
+  author  = {Sinquin, Brian and Romanelli, Marco and Bouhier, Steve and Frein, Ludovic and Alouini, Mehdi and Vallet, Marc},
+  journal = {Journal of Lightwave Technology},
+  title   = {Low Phase Noise Direct-Modulation Optoelectronic Oscillator},
+  year    = {2021},
+  volume  = {39},
+  number  = {24},
+  pages   = {7788-7793},
+  doi     = {10.1109/JLT.2021.3111703}
+}
