--- a/CV/page1sidebar.tex
+++ b/CV/page1sidebar.tex
@@ -5,20 +5,20 @@
 \large\textbf{Sciences}
 
 \begin{itemize}
-\item \cvskill{Physique des lasers}{4}
-\item \cvskill{Optique théorique}{4}
-\item \cvskill{Optique expérimentale}{4}
-\item \cvskill{Matière condensée}{4}
-\item \cvskill{Physique statistique}{4}
-\item \cvskill{Théorie du signal}{4}
+	\item \cvskill{Physique des lasers}{4}
+	\item \cvskill{Optique théorique}{4}
+	\item \cvskill{Optique expérimentale}{4}
+	\item \cvskill{Matière condensée}{4}
+	\item \cvskill{Physique statistique}{4}
+	\item \cvskill{Théorie du signal}{4}
 \end{itemize}
 
 \divider
 
 \large\textbf{Modélisation/Simulation}
 \begin{itemize}
+	\item \cvskill{Julia}{3}
 	\item \cvskill{Python}{4}
-	\item \cvskill{Mathematica}{3}
 	\item \cvskill{Matlab}{3}
 	\item \cvskill{C/C++}{3}
 \end{itemize}
@@ -27,7 +27,7 @@
 
 \large\textbf{Rédaction}
 \begin{itemize}
-	\item\cvskill{\LaTeX}{4}	
+	\item\cvskill{\LaTeX}{4}
 	\item \cvskill{Pack Office}{3}
 	\item \cvskill{Markdown}{3}
 \end{itemize}
@@ -42,8 +42,8 @@
 
 \cvsection{Langues}
 
- \textbf{Anglais (CLES B2)}\\
- \textbf{Breton (Bilingue)}
+\textbf{Anglais (CLES B2)}\\
+\textbf{Breton (Bilingue)}
 
 
 %% Yeah I didn't spend too much time making all the 
@@ -65,9 +65,9 @@
 \medskip
 
 
-\cvsection{Projets}
+% \cvsection{Projets}
 
-\large{\paradiselab \hspace{0.2em}  \href{https://www.curiositas.me}{{\textbf{curiositas.me}}}} - Blog / Porte-folio
+% \large{\paradiselab \hspace{0.2em}  \href{https://www.curiositas.me}{{\textbf{curiositas.me}}}} - Blog / Porte-folio
 
 
 
