--- a/CV/main.tex
+++ b/CV/main.tex
@@ -163,7 +163,7 @@
 
 \cvsection{Expériences}
 
-\cvevent{Stage de Master 2}{SensUp (by Lumibird)}{février 2020 -- juillet 2020}{Lannion}
+\cvevent{Stage de Master 2}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion}
 
 \textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}
 \small{
@@ -296,7 +296,7 @@
 
   \divider
 
-  \cvevent{Journée du Club Optique Micro-ondes 2022}{Société Française d'Optique}{13 juin 2022}{France}
+  \cvevent{Journée du Club Optique Micro-ondes 2023}{Société Française d'Optique}{19 juin 2023}{France}
   {\quote{Direct-Modulation OEO for Optical Pulses and Frequency combs generation}}
 
   \medskip
