--- a/CV_postdoc/FR/main.tex
+++ b/CV_postdoc/FR/main.tex
@@ -87,8 +87,8 @@
 \name{\headingfont{Brian Sinquin}}
 \tagline{Doctorant en physique des LASERs / Ph.D Student in Photonics\\
   \small{INSA, Institut FOTON (Université Rennes 1) UMR 6082 \'Equipe DOP}\\
-  \vspace{1em}
-  \color{SlateGrey}{``\small{\textit{ Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes }}}''
+  %\vspace{1em}
+  %\color{SlateGrey}{``\small{\textit{ Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes }}}''
 }
 \photo{2.8cm}{ID}
 \personalinfo{%
@@ -127,11 +127,14 @@
 \textbf{Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes}\smallskip
 
 Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
+\smallskip
 \small{
 	\begin{itemize}
-		\item Simulation numérique
-		\item Caractérisation photonique
-		\item Développement logiciel et traitement du signal
+		\item Mise en place et optimisation d'un \textbf{OEO} (Oscillateur Opto\'Electronique) à modulation directe oscillant à 10 GHz et présentant un très bas bruit de phase (architectures simple et double boucles)
+		\item Mise en place d'une compression d'impulsions optiques courtes et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
+		\item Caractérisation photonique (lasers, fibres, photodiodes...) et électronique hyper-fréquence (amplificateurs, filtres RF...) en collaboration avec le support technique (ingénieurs optique et électronique)
+		\item Mesure du facteur de Henry du laser par une méthode simple innovante (interférométrie retardée)
+		\item Simulation  du signal laser (amplitude et phase) et de la propagation non-linéaire dans la fibre optique
 	\end{itemize}
 }
 
@@ -139,12 +142,15 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 
 \cvevent{Stage de Master 2}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion}
 
-\textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}
+\textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}\smallskip
+
+Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
+\smallskip
 \small{
 	\begin{itemize}
-		\item Simulation numérique
-		\item Caractérisation photonique
-		\item Développement logiciel et traitement du signal
+		\item Caractérisation photonique (fibres, amplificateurs, laser, photodiodes)
+		\item Simulation numérique (Matlab) de la propagation optique dans l'atmosphère (faisceaux Gaussiens) et du traitement du signal
+		\item Développement logiciel, acquisition et traitement du signal (Qt/C++) pour la cartographie (1D) de la vitesse du vent en temps réel (effet Doppler, détection hétérodyne)
 	\end{itemize}
 }
 
@@ -153,12 +159,14 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \cvevent{Stage de Master 1}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest}
 
 \textbf{Mesure ultra-rapide du pouvoir rotatoire par codage spectral de la
-	polarisation}
+	polarisation}\smallskip
+	
+	Stage supervisé par \textbf{Matthieu Dubreuil} (matthieu.dubreuil@univ-brest.fr)
+	\smallskip
 \small{
 	\begin{itemize}
-		\item Simulation numérique
-		\item Polarisation
-		\item Influence du bruit
+		\item Modélisation d'un montage polarimétrique complexe (formalisme de Jones et analyse de Fourier) permettant d'encoder spectralement le pouvoir rotatoire d'un échantillon par balayage de la longueur d'onde laser.
+		\item Simulation numérique du système (Mathematica) : sensibilité aux erreurs d'alignement et au bruit
 	\end{itemize}
 }
 
@@ -168,8 +176,9 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \cvsection{Formations}
 
 \cvevent{Master 2 Parcours Photonique}{Université de Bretagne Occidentale}{2019 -- 2020}{Brest}
-\textit{Mention bien (Major)}\smallskip
-\small{
+\hfill \textit{Mention bien (Major)}
+\vspace{-1em}\small{
+	
   \begin{itemize}
     \item Optique intégrée
     \item LASERs et Télécommunication
@@ -181,8 +190,8 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \divider
 
 \cvevent{Master 1 Physique fondamentale et appliquée}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
-\textit{Mention assez bien (Major)}\smallskip
-\small{
+\hfill\textit{Mention assez bien (Major)}
+\vspace{-1em}\small{
   \begin{itemize}
     \item Théorie du signal
     \item Optique non linéaire, anisotrope
@@ -193,16 +202,16 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \divider
 
 \cvevent{Licence de physique}{Université de Bretagne Occidentale}{2015 -- 2018}{Brest}
-\textit{Mention très bien en L3 (Major)}\smallskip
-\small{
-  \begin{itemize}
-    \item Optique ondulatoire
-    \item Mécanique quantique
-    \item Ondes et matière
-    \item Physique expérimentale et numérique
-    \item Projet expérimental de L3 en laboratoire : Caractérisation de biomatériaux par colorimétrie
-  \end{itemize}
-}
+\hfill \textit{Mention très bien en L3 (Major)}
+%\small{
+%  \begin{itemize}
+%    \item Optique ondulatoire
+%    \item Mécanique quantique
+%    \item Ondes et matière
+%    \item Physique expérimentale et numérique
+%    \item Projet expérimental de L3 en laboratoire : Caractérisation de biomatériaux par colorimétrie
+%  \end{itemize}
+%}
 
 
 
@@ -234,6 +243,7 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 
   \begin{itemize}
     \item \normalsize \fullcite{Sinquin2021}
+    \medskip
     \item \normalsize \fullcite{Sinquin2023}
   \end{itemize}
 
@@ -343,7 +353,7 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 
 
  
-
+\medskip
   \cvsection{Enseignement}
 
   \cvevent{Enseignements en première année de thèse}{Université de Rennes 1}{2020--2021}{Rennes -- France}
@@ -364,9 +374,36 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
     \item TD Systèmes et Signaux pour la Physique \textbf{(Licence 3)} -- 10h
 
   \end{itemize}
-  \divider
-  
-    \cvsection{Encadrement}
+
+  \medskip
+\cvsection{Encadrement}
+    
+\cvevent{Stage de Master 1}{ }{2021}{Rennes -- France}
+\vspace{-1em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
+nouvelle architecture d'OEO}
+
+\divider
+
+
+\cvevent{Projet de Master 2}{ }{2022}{Rennes -- France}
+\vspace{-1em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
+
+\divider
+    
+\cvevent{Stage de Master 1}{ }{2022}{Rennes -- France}
+\vspace{-1em}\textbf{Laser semiconducteur stabilisé sur
+	cavité ULE compacte: application à
+	de nouvelles architectures d’OEO}
+
+\divider
+
+    
+\cvevent{Stage de Licence 3}{ }{2023}{Rennes -- France}
+\vspace{-1em}\textbf{Oscillateur Optoélectronique à modulation directe}
+
+
+    
+    
 \end{fullwidth}
 %% If the NEXT page doesn't start with a \cvsection but you'd
 %% still like to add a sidebar, then use this command on THIS
