--- a/CV_postdoc/FR/page1sidebar.tex
+++ b/CV_postdoc/FR/page1sidebar.tex
@@ -1,16 +1,28 @@
 
 
-
+\vspace{-0.1em}
 \cvsection{Compétences}
-\large\textbf{Sciences}
 
 \begin{itemize}
-	\item \cvskill{Physique des lasers}{4}
-	\item \cvskill{Optique théorique}{4}
-	\item \cvskill{Optique expérimentale}{4}
-	\item \cvskill{Matière condensée}{4}
-	\item \cvskill{Physique statistique}{4}
-	\item \cvskill{Théorie du signal}{4}
+\item Travail en équipe
+\item Autonomie
+
+\end{itemize}
+
+
+
+
+
+\divider
+
+\cvsubsection{Science}
+\begin{itemize}
+	\item {Physique des lasers}
+	\item {Optique non-linéaire}
+	\item {Photonique hyper-fréquence}
+	\item {Systèmes dynamiques}
+	\item {Techniques expérimentales}
+	\item {Théorie et traitement du signal}
 \end{itemize}
 
 \divider
@@ -54,14 +66,13 @@
 \cvsection{Centres d'intérêt}
 
 \begin{itemize}
-	\item Musique (guitare, flûte, piano)
-	\item Informatique
-	\item Philosophie des sciences
+	\item Escalade
+	\item Informatique (open-source)
 	\item Sciences et Technique
 	\item Pédagogie et transmission du savoir
 \end{itemize}
 
-\medskip
+%\medskip
 
 
 % \cvsection{Projets}
