--- a/CV_postdoc/FR/main.tex
+++ b/CV_postdoc/FR/main.tex
@@ -84,22 +84,25 @@
 
 
 \begin{document}
-\name{\headingfont{Brian Sinquin}}
-\tagline{Doctorant en physique des LASERs / Ph.D Student in Photonics\\
-  \small{INSA, Institut FOTON (Université Rennes 1) UMR 6082 \'Equipe DOP}\\
-  %\vspace{1em}
-  %\color{SlateGrey}{``\small{\textit{ Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes }}}''
-}
+\name{{\headingfont{Brian Sinquin}}  \Huge / {\headingfont{Docteur en photonique}}}
+\tagline{}
+%\tagline{
+%	Doctorant en physique des LASERs / Ph.D Student in Photonics\\
+%  \small{INSA, Institut FOTON (Université Rennes 1) UMR 6082 \'Equipe DOP}\\
+%  \vspace{1em}
+%  \color{SlateGrey}{``\small{\textit{ Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes }}}''
+%}
 \photo{2.8cm}{ID}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-  \email{brian.sinquin@gmail.com}
-  \phone{06 52 40 41 62}
-  \location{3 rue Robert Rême, 35000 Rennes}
-  \voiture{Permis B}
-  {{\Large\orcidlink{0000-0001-8278-394X}}\hspace{0.5em}0000-0001-8278-394X \hspace{2em}}
-  \linkedin{\href{https://linkedin.com/in/brian-sinquin/}{linkedin.com/in/brian-sinquin/}}
+\large{\twemoji[width=1em]{fr}\hspace{0.9em}Français\hspace{1.5em} 26 Ans}\hspace{1.5em}
+\phone{(+33)6 52 40 41 62}
+\location{3 rue Robert Rême, 35000 Rennes}  
+\voiture{Permis B}
+\email{brian.sinquin@gmail.com}
+%\orcid{0000-0001-8278-394X}
+\linkedin{\href{https://linkedin.com/in/brian-sinquin/}{linkedin.com/in/brian-sinquin/}}
   % \github{\href{https://github.com/ParadiseLab/}{ParadiseLab}}
 
   % \github{github.com/brian.sinquin}
@@ -131,10 +134,11 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \small{
 	\begin{itemize}
 		\item Mise en place et optimisation d'un \textbf{OEO} (Oscillateur Opto\'Electronique) à modulation directe oscillant à 10 GHz et présentant un très bas bruit de phase (architectures simple et double boucles)
-		\item Mise en place d'une compression d'impulsions optiques courtes et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
-		\item Caractérisation photonique (lasers, fibres, photodiodes...) et électronique hyper-fréquence (amplificateurs, filtres RF...) en collaboration avec le support technique (ingénieurs optique et électronique)
-		\item Mesure du facteur de Henry du laser par une méthode simple innovante (interférométrie retardée)
+		\item Mise en place d'une compression d'impulsions optiques courtes (ps) et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
+		\item Caractérisation photonique (OSA, Autocorrélateur, RIN) et électronique hyper-fréquence (ESA, VNA, bruits de phase, amplificateurs, filtres RF) en collaboration avec le support technique (ingénieurs optique et électronique)
+		\item Mesure du facteur de Henry du laser par une méthode simple et innovante (reconstruction de champ complexe par interférométrie)
 		\item Simulation  du signal laser (amplitude et phase) et de la propagation non-linéaire dans la fibre optique
+		\item Asservissement de longueur d'onde laser (espace libre et DFB) par PDH et Tilt-locking sur des cavités ULE, et application à de nouvelles architectures d'OEO
 	\end{itemize}
 }
 
@@ -148,7 +152,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \smallskip
 \small{
 	\begin{itemize}
-		\item Caractérisation photonique (fibres, amplificateurs, laser, photodiodes)
+		\item Caractérisation de la chaîne LiDAR (fibres, amplificateurs, laser, photodiodes)
 		\item Simulation numérique (Matlab) de la propagation optique dans l'atmosphère (faisceaux Gaussiens) et du traitement du signal
 		\item Développement logiciel, acquisition et traitement du signal (Qt/C++) pour la cartographie (1D) de la vitesse du vent en temps réel (effet Doppler, détection hétérodyne)
 	\end{itemize}
@@ -294,7 +298,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-\href{https://hal.archives-ouvertes.fr/FOTON-DOP/hal-03285993}{Présentation orale de 15 minutes en visio-conférence (COVID)}
+{Présentation orale de 15 minutes en visio-conférence (COVID)} | \href{https://hal.science/hal-03285993}{hal-03285993}
 
 \divider
 
@@ -304,7 +308,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-\href{https://hal.archives-ouvertes.fr/FOTON-DOP/hal-03284744}{Présentation de poster lors de l'événement}
+{Présentation de poster lors de l'événement} | \href{https://hal.science/hal-03284744}{hal-03284744}
 
 \divider
 
@@ -314,7 +318,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-\href{https://hal.science/hal-03988116}{Présentation orale de 15 minutes}
+{Présentation orale de 15 minutes} | \href{https://hal.science/hal-03988116}{hal-03988116}
 
 \divider
 
@@ -324,7 +328,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 {\quote{Oscillateur optoélectronique (OEO) générant des peignes de fréquences et des trains d’impulsions optiques}}
 \medskip
 
-\href{https://hal.science/hal-03986413}{Présentation de poster lors de l'évenement}
+{Présentation de poster lors de l'évenement} | \href{https://hal.science/hal-03986413}{hal-03986413}
 
 \divider
 
@@ -333,8 +337,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \medskip
 
-\href{https://hal.science/hal-
-	04133619}{Présentation de poster lors de l'évenement en visio-conférence}
+{Présentation de poster lors de l'évenement en visio-conférence} | \href{https://hal.science/hal-04133619}{hal-04133619}
 
 \newpage
 
@@ -346,7 +349,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-\href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{Présentation orale de 15 minutes en visio-conférence (COVID)}
+{Présentation orale de 15 minutes en visio-conférence (COVID)} | {\color{red}\faYoutubePlay}\hspace{0.5em} \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
 
 
 
@@ -356,50 +359,40 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \medskip
   \cvsection{Enseignement}
 
-  \cvevent{Enseignements en première année de thèse}{Université de Rennes 1}{2020--2021}{Rennes -- France}
+  \cvevent{Vacataire - Université de Rennes 1}{UFR SPM}{2020--2022}{Rennes -- France}
 
   \begin{itemize}
     \item TP Optique géométrique \textbf{(Licence 1)} -- 16h
-    \item TD Systèmes et Signaux pour la Physique \textbf{(Licence 3)} -- 10h
-
-  \end{itemize}
-
-  \divider
-
-  \cvevent{Enseignements en deuxième année de thèse}{Université de Rennes 1}{2021--2022}{Rennes -- France}
-
-  \begin{itemize}
+    \item TD \'Eléctromagnétisme \textbf{(Licence 2)} -- 18h
+    \item TD Systèmes et Signaux pour la Physique \textbf{(Licence 3)} -- 20h
     \item TP LASER \textbf{(Master 1)} -- 4h
-    \item TD \'Eléctromagnétisme \textbf{(Licence 2)} -- 20h
-    \item TD Systèmes et Signaux pour la Physique \textbf{(Licence 3)} -- 10h
-
   \end{itemize}
 
   \medskip
 \cvsection{Encadrement}
     
-\cvevent{Stage de Master 1}{ }{2021}{Rennes -- France}
-\vspace{-1em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
+\cvevent{Stage de Master 1}{1 mois et demi}{2021}{Rennes -- France}
+\vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
 nouvelle architecture d'OEO}
 
 \divider
 
 
-\cvevent{Projet de Master 2}{ }{2022}{Rennes -- France}
-\vspace{-1em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
+\cvevent{Projet de Master 2}{3 mois}{2022}{Rennes -- France}
+\vspace{-0.5em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
 
 \divider
     
-\cvevent{Stage de Master 1}{ }{2022}{Rennes -- France}
-\vspace{-1em}\textbf{Laser semiconducteur stabilisé sur
+\cvevent{Stage de Master 1}{1 mois et demi}{2022}{Rennes -- France}
+\vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur
 	cavité ULE compacte: application à
 	de nouvelles architectures d’OEO}
 
 \divider
 
     
-\cvevent{Stage de Licence 3}{ }{2023}{Rennes -- France}
-\vspace{-1em}\textbf{Oscillateur Optoélectronique à modulation directe}
+\cvevent{Stage de Licence 3}{1 mois et demi}{2023}{Rennes -- France}
+\vspace{-0.5em}\textbf{Oscillateur Optoélectronique à modulation directe}
 
 
     
