--- a/CV_postdoc/FR/page1sidebar.tex
+++ b/CV_postdoc/FR/page1sidebar.tex
@@ -61,8 +61,32 @@
 %% spacing consistent... sorry. Use \smallskip, \medskip, 
 %% \bigskip, \vpsace etc to make ajustments.
 \medskip
+\cvsection{Activité scientifique}
 
+\cvsubsection{Publication}
+\begin{itemize}
+	\item 2 articles publiés (premier auteur)
+\end{itemize}
 
+\cvsubsection{Communication}
+\begin{itemize}
+	\item 6 oraux (international/national)
+	\item 3 posters
+\end{itemize}
+
+\cvsection{Activité académique}
+
+\cvsubsection{Enseignement}
+\begin{itemize}
+	\item 58 h (TD/TP)
+\end{itemize}
+
+\cvsubsection{Encadrement}
+\begin{itemize}
+	\item 4 stages et projets
+\end{itemize}
+
+\medskip
 \cvsection{Centres d'intérêt}
 
 \begin{itemize}
@@ -71,6 +95,7 @@
 	\item Sciences et Technique
 	\item Pédagogie et transmission du savoir
 \end{itemize}
+
 
 %\medskip
 
