--- a/CV_postdoc/FR/main.tex
+++ b/CV_postdoc/FR/main.tex
@@ -349,7 +349,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-{Présentation orale de 15 minutes en visio-conférence (COVID)} | {\color{red}\faYoutubePlay}\hspace{0.5em} \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
+{Présentation orale de 15 minutes en visio-conférence (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
 
 
 
