--- a/CV_postdoc/FR/page1sidebar.tex
+++ b/CV_postdoc/FR/page1sidebar.tex
@@ -70,7 +70,7 @@
 
 \cvsubsection{Communication}
 \begin{itemize}
-	\item 6 oraux (international/national)
+	\item 6 oraux (3 internationaux / 3 nationaux)
 	\item 3 posters
 \end{itemize}
 
@@ -78,12 +78,12 @@
 
 \cvsubsection{Enseignement}
 \begin{itemize}
-	\item 58 h (TD/TP)
+	\item 58 h (TD/TP) en licence et master
 \end{itemize}
 
 \cvsubsection{Encadrement}
 \begin{itemize}
-	\item 4 stages et projets
+	\item 4 stages et projets (L3, M1, M2)
 \end{itemize}
 
 \medskip
